for version 4.3
    - Use QtSingleApplication.
    - Window manager decoration close button can iconify.
    - Changed command line option -c: Disables WM close button iconify.

for version 4.2.2
    - Fix installing translation files.

for version 4.2.1
    - Fix type in .pro file that prevents all files from installing.

for version 4.2
    - Fix disabling balloon title changes menu option.
    - Ignore docked windows and continue looking when matching command by name
      and when matching by specified pid.
    - Bash completion
    - Italian Translation thanks to Alessio Cassibba
    - Change behavior of tray activation. Raise window when not active, and
      iconify when active.
    - Change to the desktop the window was last on when restoring. Only works
      with WMs that support _NET_CURRENT_DESKTOP.
    - Iconify when focus lost.

for version 4.1
    - Fix bug 431297: Fall back to window title and class name when launching if
      pid becomes invalid. Allows commands that detach and get a new pid (rox)
      to dock correctly.
    - New command line option -n: Specify the string to use for fall back when
      launching a command and a pid match cannot be determined.
    - New command line option -y: Force matching command by title and class
      name.
    - New command line option -x: Specify PID of application to dock.
    - Fix a bug that prevented the time out for trying to dock and launched
      command from increasing.
    - Menu item for setting the tray icon.
    - Fix bug: Do not quit when closing docked application from tray menu.

for version 4.0
    - 4.0 rewrite complete.

for version 4.0-preview-1
    - Preview release of Qt 4 port.

for version 1.3
    - Fix bug when reading back balloon timeout on session restoration
    - AutoLaunch enhancement (Request user to provide program name when
      autodetection failed)
    - Indonesian translations from Eko Prasetiyo
    - Italian translations from Alessio Cassibba